# fcitx-libpinyin

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  README  config.h.in
cmake/: FindLibpinyin.cmake
data/: CMakeLists.txt  fcitx-libpinyin.conf.in  fcitx-libpinyin.desc  pinyin-libpinyin.conf.in  shuangpin-libpinyin.conf.in  table.conf  table.conf.in  zhuyin-libpinyin.conf.in
dictmanager/: CMakeLists.txt  browserdialog.cpp  browserdialog.h  browserdialog.ui  dictmanager.cpp  dictmanager.h  dictmanager.ui  erroroverlay.cpp  erroroverlay.h  filedownloader.cpp  filedownloader.h  filelistmodel.cpp  filelistmodel.h  guicommon.h  importer.cpp  importer.h  main.cpp  main.h  scelconverter.cpp  scelconverter.h
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-libpinyin.pot  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  bus.cpp  bus.h  common.h  config.cpp  eim.cpp  eim.h  enummap.cpp  enummap.h  fcitx-libpinyin.conf.in  fcitx-libpinyin.desc  pystring.cpp  pystring.h  utils.cpp  utils.h
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  sp.cpp
